# Cobot

./: .gitignore  README.md  START_COBOT_DISCOVERY_HOST.sh
cobot_shadow_bridge/: cobot_importer_jazzy.py  shadow_robot_state_publisher.launch.py
mycobot_docker/: DEPLOY_TO_NANO.sh  Dockerfile  RUN_ARM_CAMERA_NANO.sh  RUN_LAPTOP_3D.sh  RUN_PLANNING_PC.sh  RUN_ROBOT_EYE.sh  RUN_ROBOT_NANO.sh  RUN_TELEOP.sh  RUN_VISUAL_SERVO.sh  ZERO_JOINTS.sh  docker-compose.yml
mycobot_docker/custom_ws/: cyclonedds.xml  cyclonedds_nano.xml  cyclonedds_pc.xml  disable_shm.xml  fastdds_client.xml  fastdds_disable_shm.xml  fastdds_super_client.xml  fix_and_run.sh  moveit_crash.log]  mycobot_bridge.service  start_hardware.sh  start_mycobot.sh  udp_bridge_nano.py
mycobot_docker/custom_ws/src/mycobot_280_jn_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_docker/custom_ws/src/mycobot_280_jn_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  mycobot_280_jn.ros2_control.xacro  mycobot_280_jn.srdf  mycobot_280_jn.urdf.xacro  ompl_planning.yaml
mycobot_docker/custom_ws/src/mycobot_280_jn_moveit_config/launch/: demo.launch.py  galactic_demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mycobot_docker/custom_ws/src/mycobot_description/: CMakeLists.txt  package.xml
mycobot_docker/custom_ws/src/mycobot_description/mycobot_description/: joint_rebrander.py
mycobot_docker/custom_ws/src/mycobot_description/urdf/mycobot_280_jn/: mycobot_280_jn.urdf  mycobot_280_jn.urdf.xacro
mycobot_docker/custom_ws/src/mycobot_hw_interface/: package.xml  setup.cfg  setup.py
mycobot_docker/custom_ws/src/mycobot_hw_interface/launch/: mycobot_hw.launch.py
mycobot_docker/custom_ws/src/mycobot_hw_interface/mycobot_hw_interface/: arm_camera_node.py  cobot_exporter_galactic.py  joint_state_relay.py  mycobot_bridge.py  udp_bridge_pc.py
mycobot_docker/graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_detect_src.json  .graphify_merged.json  .graphify_root  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
(+218 files in other folders)
