<?xml version="1.0"?>
<package format="3">
  <name>mycobot_280_jn_moveit_config</name>
  <version>0.3.0</version>
  <description>MoveIt config for mycobot_280_jn Legacy</description>
  <maintainer email="mhc@todo.todo">mhc</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
