<?xml version="1.0"?>
<package format="3">
  <name>mycobot_hw_interface</name>
  <version>0.0.0</version>
  <description>MyCobot Hardware Interface Legacy</description>
  <maintainer email="mhc@todo.todo">mhc</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
